# robot_motion_execution

./: README.md
eband_local_planner/: CMakeLists.txt  ROSLesson5.odp
execution_msgs/: CMakeLists.txt
execution_msgs/srv/: execute_trajectory_rviz.srv
execution_param_config/: CMakeLists.txt
execution_param_config/execution_config/: execution_config_real_omnirob.yaml
execution_server/: CMakeLists.txt
execution_server/include/execution_server/: execution_control_center.h  execution_server.h
execution_server/launch/: execution_server.launch
execution_server/src/: execution_control_center.cpp  execution_server.cpp  execution_service_node.cpp
motion_trajectory_execution/: CMakeLists.txt  package.xml
motion_trajectory_execution/config/: costmap_params.yaml  eband_planner_params.yaml  global_costmap_params.yaml
motion_trajectory_execution/include/motion_trajectory_execution/: trajectory_execution_robot.h  trajectory_execution_rviz.h  trajectory_execution_vrep.h
motion_trajectory_execution/launch/: eband_planner_config.launch
motion_trajectory_execution/src/: run_motion_execution_robot.cpp  run_motion_execution_rviz.cpp  run_motion_execution_rviz_multi_robot.cpp  run_motion_execution_vrep.cpp  trajectory_execution_robot.cpp  trajectory_execution_rviz.cpp  trajectory_execution_vrep.cpp
trajectory_planning/: CMakeLists.txt  README.txt
trajectory_planning/include/trajectory_planning/: Path.h  Trajectory.h
trajectory_planning/results/: maxVelocity.txt  plotTrajectory.m  trajectory.txt
trajectory_planning/src/: Example.cpp  Path.cpp  Test.cpp  Trajectory.cpp
